--- a/styles/about.css
+++ b/styles/about.css
@@ -1,5 +1,4 @@
 .about-container {
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
