--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,5 +1,4 @@
 .contact-container {
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
