--- a/styles/profile.css
+++ b/styles/profile.css
@@ -1,5 +1,4 @@
 .profile-container {
-  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
