--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,6 +1,4 @@
 .projects-container {
-  position: relative;
-  bottom: 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
